# Retina

./: AGENTS.md  Cargo.toml  README.md  build.rs  config.example.toml
migrations/: 20250101000000_initial.sql  20250102000000_create_sessions.sql  20250103000000_add_welcome.sql  20250104000000_create_custom_commands.sql  20250105000000_add_custom_commands_module.sql  20250106000000_create_reaction_roles.sql  20250107000000_add_reaction_roles_module.sql  20250108000000_create_giveaways.sql  20250109000000_create_ticket_tables.sql  20250110000000_add_tickets_module.sql  20250111000000_create_xp_tables.sql  20250112000000_add_xp_module.sql  20250113000000_create_scheduled_announcements.sql  20250114000000_create_scheduled_actions.sql  20250115000000_add_scheduling_module.sql  20250117000000_extend_commands.sql
src/: cli.rs  main.rs  types.rs
src/commands/: fun.rs  general.rs  mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/events/: mod.rs
src/modules/: afk.rs  auto_mod.rs  custom_commands.rs  fun.rs  general.rs  giveaway.rs  logging.rs  manager.rs  misc.rs  mod.rs  ranks.rs  reaction_roles.rs  reminders.rs  scheduling.rs  shadowban.rs  tickets.rs  welcome.rs  xp.rs
src/web/: mod.rs
static/: dashboard.js  style.scss
templates/: dashboard.html  index.html  server.html
templates/partials/: admin_content.html  commands_content.html  dashboard_content.html  index_anonymous.html  index_logged_in.html  rule_banned_words_fields.html  rule_caps_fields.html  rule_card.html  rule_emotes_fields.html  rule_max_length_fields.html  rule_mentions_fields.html  (+5 more)
(+2 files in other folders)
