[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord bot
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["cache", "http", "client", "gateway", "model"] }
# Web dashboard
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.23"
rustls-pemfile = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
# CLI + Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
chrono = "0.4"
oauth2 = "5.0"
base64 = "0.22"
mlua = { version = "0.11", features = ["lua54", "send"] }
rand = "0.8"

[build-dependencies]
grass = "0.13"
